@@ -3,6 +3,7 @@
 Apr 20, 2022
 - Add video, attachments, and error message to HTML report summary lines
 - Use SVG instead of PNG Gwen logo image in HTML reports
+- Support CSV data interpolation in feature name and description
 
 3.11.0
 ======
